[gd_scene load_steps=43 format=2]

[ext_resource path="res://Enemies/Logic/AntEnemy.gd" type="Script" id=1]
[ext_resource path="res://UI/Healthbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Logic/EnemyStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/ScentRay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Projectiles/EnemyProjectileSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Collision/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/SprintWarning.gd" type="Script" id=7]
[ext_resource path="res://Collision/AntHurtbox.gd" type="Script" id=8]
[ext_resource path="res://Fonts/pixeltype.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Enemies/enemy_ant_placeholder.png" type="Texture" id=10]
[ext_resource path="res://Effects/dot_particle.png" type="Texture" id=11]
[ext_resource path="res://Enemies/sprint_warning.png" type="Texture" id=12]
[ext_resource path="res://Enemies/States/AntEnemyStateMachine.gd" type="Script" id=13]
[ext_resource path="res://Enemies/States/Sprint.gd" type="Script" id=14]
[ext_resource path="res://Enemies/States/Chase.gd" type="Script" id=15]
[ext_resource path="res://Enemies/States/Idle.gd" type="Script" id=16]
[ext_resource path="res://Enemies/States/Shoot.gd" type="Script" id=17]
[ext_resource path="res://Enemies/States/StopChaseCurve.tres" type="Curve" id=18]
[ext_resource path="res://Player/DashStuff.tscn" type="PackedScene" id=19]
[ext_resource path="res://Enemies/Logic/EnemyDash.gd" type="Script" id=20]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 22.5

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.3349
height = 25.9323

[sub_resource type="CapsuleShape2D" id=3]
radius = 27.3543

[sub_resource type="Animation" id=4]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:FRICTION")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.9, 0.5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "sprinting"
length = 0.68
tracks/0/type = "method"
tracks/0/path = NodePath("StateMachine/Sprint/SprintParticles")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 21.4247

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.269737, 0.973864 ), 0.0, 0.0899618, 0, 0, Vector2( 1, 0.0011363 ), -2.86234, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 120.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.42
angular_velocity = 50.0
angular_velocity_random = 0.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.2
scale_curve = SubResource( 8 )
color = Color( 0.37, 0.204795, 0.1591, 1 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=12]
resource_name = "idle_down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -2 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "idle_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 2 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 2 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "idle_up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 27, 28 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -2 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "shoot_down"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -2 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "shoot_left"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 2 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "shoot_right"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 2 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "shoot_up"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -2 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "walk_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -2 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "walk_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 2 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, -2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 2 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "walk_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -2 ) ]
}

[node name="AntEnemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )
FRICTION = 0.9

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 40
collision_mask = 4
script = ExtResource( 8 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="PhysicsCollisionShape" type="CollisionShape2D" parent="."]
modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
shape = SubResource( 3 )

[node name="Healthbar" parent="." instance=ExtResource( 2 )]
margin_left = -32.0
margin_top = 40.0452
margin_right = 32.0
margin_bottom = 52.0452
max_value = 10.0
value = 10.0

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]

[node name="ScentRay" parent="." instance=ExtResource( 4 )]
visible = false
enabled = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dying = SubResource( 4 )
anims/sprinting = SubResource( 5 )

[node name="SoftCollision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
scale = Vector2( 0.907084, 1 )
shape = SubResource( 6 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Sprint" type="Node2D" parent="StateMachine"]
script = ExtResource( 14 )

[node name="SprintMovementTween" type="Tween" parent="StateMachine/Sprint"]

[node name="SprintDelayTimer" type="Timer" parent="StateMachine/Sprint"]
one_shot = true

[node name="SprintWarning" type="Sprite" parent="StateMachine/Sprint"]
visible = false
position = Vector2( 0, -55.372 )
scale = Vector2( 0.915057, 1.5017 )
texture = ExtResource( 12 )
script = ExtResource( 7 )

[node name="SprintWarningTween" type="Tween" parent="StateMachine/Sprint/SprintWarning"]

[node name="SprintParticles" type="Particles2D" parent="StateMachine/Sprint"]
visible = false
show_behind_parent = true
scale = Vector2( 4, 4 )
emitting = false
amount = 20
lifetime = 0.68
one_shot = true
speed_scale = 2.0
explosiveness = 0.2
visibility_rect = Rect2( -100, -100, 200, 100 )
process_material = SubResource( 9 )
texture = ExtResource( 11 )

[node name="DashStuff" parent="StateMachine/Sprint" instance=ExtResource( 19 )]
script = ExtResource( 20 )

[node name="DashParticles" parent="StateMachine/Sprint/DashStuff" index="1"]
modulate = Color( 0.501961, 0.109804, 0.0235294, 1 )

[node name="Chase" type="Node2D" parent="StateMachine"]
script = ExtResource( 15 )
STOP_CHASE_DENSITY = ExtResource( 18 )

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource( 16 )

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
process_mode = 0
one_shot = true

[node name="Shoot" type="Node2D" parent="StateMachine"]
script = ExtResource( 17 )

[node name="ShootDelayTimer" type="Timer" parent="StateMachine/Shoot"]
one_shot = true

[node name="EnemyProjectileSpawner" parent="StateMachine/Shoot" instance=ExtResource( 5 )]

[node name="StateLabel" type="Label" parent="."]
visible = false
anchor_bottom = 0.147
margin_left = -122.0
margin_top = -57.1784
margin_right = 122.0
margin_bottom = -41.1784
custom_fonts/font = SubResource( 11 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/idle_down = SubResource( 12 )
anims/idle_left = SubResource( 13 )
anims/idle_right = SubResource( 14 )
anims/idle_up = SubResource( 15 )
anims/shoot_down = SubResource( 16 )
anims/shoot_left = SubResource( 17 )
anims/shoot_right = SubResource( 18 )
anims/shoot_up = SubResource( 19 )
anims/walk_down = SubResource( 20 )
anims/walk_left = SubResource( 21 )
anims/walk_right = SubResource( 22 )
anims/walk_up = SubResource( 23 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_changed" from="EnemyStats" to="." method="_on_EnemyStats_health_changed"]
[connection signal="health_zero" from="EnemyStats" to="." method="_on_EnemyStats_health_zero"]
[connection signal="area_entered" from="SoftCollision" to="." method="_on_SoftCollision_area_entered"]
[connection signal="add_dash_frame" from="StateMachine/Sprint/DashStuff" to="StateMachine/Sprint" method="_on_DashStuff_add_dash_frame"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_IdleTimer_timeout"]

[editable path="Hurtbox"]
[editable path="StateMachine/Sprint/DashStuff"]
[editable path="StateMachine/Shoot/EnemyProjectileSpawner"]
